--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,10 @@ html, body {
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    background: #7F7FD5; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    background: #00B4DB; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0083B0, #00B4DB); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0083B0, #00B4DB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     margin: 0;
     padding: 0;
@@ -45,7 +46,7 @@ body {
 }
 
 #content #headline {
-    padding: 25px;
+    padding: 30px;
 }
 
 /*
@@ -74,7 +75,7 @@ body {
     list-style: none;
     width: 20px;
     height: 20px;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(255, 255, 255, 0.2);
     animation: animate 25s linear infinite;
     bottom: -150px;
 
