--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,9 @@ html, body {
 body {
     font-family: 'Source Sans Pro', sans-serif;
 
-    background: #0f2027; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0f2027, #203a43, #2c5364); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0f2027, #203a43, #2c5364); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #67B26F;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4ca2cd, #67B26F);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4ca2cd, #67B26F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     margin: 0;
     padding: 0;
@@ -31,7 +31,7 @@ body {
     width: 100%;
     height: 100%;
     border: 0;
-    border-radius: 0;
+    border-radius: 5px;
 
     -webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.60);
     -moz-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.60);
