--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body {
     height: 100%;
     border: 0;
     border-radius: 5px;
+    overflow: hidden;
 
     -webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.60);
     -moz-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.60);
